--- a/pages/10022.html
+++ b/pages/10022.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1010,7 +1010,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <ul>
-<li><a href='#ryutakayanagi_formula'>Ryu-Takayanagi formula</a></li>
+<li><a href='#RyuTakayanagiFormula'>Ryu-Takayanagi formula</a></li>
 <li><a href='#emergence_of_bulk_spacetime_from_boundary_information_theory'>Emergence of bulk spacetime from boundary information theory</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -1022,7 +1022,7 @@ margin-left: 0em;
 
 <p>Holographic entanglement entropy refers to the expression of <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a> expressed “holographically” via a version of <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> in terms of the <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a> of a higher-dimensional <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
 
-<h3 id="ryutakayanagi_formula">Ryu-Takayanagi formula</h3>
+<h3 id="RyuTakayanagiFormula">Ryu-Takayanagi formula</h3>
 
 <p>For <a class="existingWikiWord" href="/nlab/show/quantum+field+theories">quantum field theories</a> that are exhibited as <a class="existingWikiWord" href="/nlab/show/boundary+field+theories">boundary field theories</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>A</mi></mrow><annotation encoding="application/x-tex">A</annotation></semantics></math> of an approximately <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> via some approximation to <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (for instance for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> via <a class="existingWikiWord" href="/nlab/show/AdS-QCD+duality">AdS-QCD duality</a>) their <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/bounded+set">bounded domain</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>B</mi><mo>⊂</mo><mi>A</mi></mrow><annotation encoding="application/x-tex">B\subset A</annotation></semantics></math> turns out to be proportional to the <a class="existingWikiWord" href="/nlab/show/area">area</a> of the minimal-area <a class="existingWikiWord" href="/nlab/show/surface">surface</a> inside the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> spacetime that has the same <a class="existingWikiWord" href="/nlab/show/boundary">boundary</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∂</mo><mi>B</mi></mrow><annotation encoding="application/x-tex">\partial B</annotation></semantics></math> (see <a href="#NishiokaRyuTakayanagi09">Nishioka-Ryu-Takayanagi 09 (3.3)</a> for review of the formula and <a href="#LewkowyczMaldacena13">Lewkowycz-Maldacena 13</a> for a conceptual explanation).</p>
 <center>
@@ -1053,7 +1053,7 @@ margin-left: 0em;
 
 <p>Further discussion of implications of the Ryu-Takayanagi formula in <a href="#vanRaamsdonk10">van Raamsdonk 10</a> suggested that the logic may also be turned around: Instead of computing <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a> from known <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>, conversely the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> may be reconstructed from knowledge of the <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a boundary field theory.</p>
 
-<p>Talking this perspective to the extreme suggests a description of <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> entirely in terms of <a class="existingWikiWord" href="/nlab/show/information+theory">information theory</a>/<a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a>-relations of a boundary <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a> (“tensor networks”) (<a href="#ADH14">ADH 14</a>, <a href="#PYHP15">PYHP 15</a>).</p>
+<p>Talking this perspective to the extreme suggests a description of <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> entirely in terms of <a class="existingWikiWord" href="/nlab/show/information+theory">information theory</a>/<a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a>-relations of a boundary <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a> (“tensor networks”, <a href="#Swingle12">Swingle 12</a>, and quantum error correction codes <a href="#ADH14">ADH 14</a>, <a href="#PYHP15">PYHP 15</a>, see <a href="#Harlow18">Harlow 18</a> for review).</p>
 <center>
 <img src="https://ncatlab.org/nlab/files/BlackHoleTensorNetwork.jpg" width="500" /></center>
 <blockquote>
@@ -1064,6 +1064,8 @@ margin-left: 0em;
 <blockquote>
 <p>graphics grabbed from <a href="#Harlow18">Harlow 18</a></p>
 </blockquote>
+
+<p>In this context the Ryu-Takayanagi formula for holographic entanglement entropy (<a href="#RyuTakayanagiFormula">above</a>) has an exact proof <a href="#PYHP15">PYHP 15, Theorem 2</a>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -1161,7 +1163,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Development of this idea in terms of quantum error correcting codes is due to</p>
+<p>Development of this idea in terms of <span class="newWikiWord">tensor networks<a href="/nlab/new/tensor+networks">?</a></span> is due to</p>
+
+<ul>
+<li id="Swingle12">Brian Swingle, <em>Constructing holographic spacetimes using entanglement renormalization</em> (<a href="https://arxiv.org/abs/1209.3304">arXiv:1209.3304</a>)</li>
+</ul>
+
+<p>and further in terms of quantum error correcting codes due to</p>
 
 <ul>
 <li id="ADH14">
@@ -1190,7 +1198,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 12:56:45.
+  Last revised on January  3, 2019 at 13:06:58.
   See the <a href="https://ncatlab.org/nlab/history/holographic entanglement entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
