--- a/pages/10022.html
+++ b/pages/10022.html
@@ -1053,7 +1053,7 @@ margin-left: 0em;
 
 <p>Further discussion of implications of the Ryu-Takayanagi formula in <a href="#vanRaamsdonk10">van Raamsdonk 10</a> suggested that the logic may also be turned around: Instead of computing <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a given <a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a> from known <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/geometry">geometry</a>, conversely the <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a> may be reconstructed from knowledge of the <a class="existingWikiWord" href="/nlab/show/entanglement+entropy">entanglement entropy</a> of a boundary field theory.</p>
 
-<p>Talking this perspective to the extreme suggests a description of <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> entirely in terms of <a class="existingWikiWord" href="/nlab/show/information+theory">information theory</a>/<a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a>-relations of a boundary <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a> (“tensor networks”, <a href="#Swingle12">Swingle 12</a>, and quantum error correction codes <a href="#ADH14">ADH 14</a>, <a href="#PYHP15">PYHP 15</a>, see <a href="#Harlow18">Harlow 18</a> for review).</p>
+<p>Talking this perspective to the extreme suggests a description of <a class="existingWikiWord" href="/nlab/show/bulk">bulk</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> entirely in terms of <a class="existingWikiWord" href="/nlab/show/information+theory">information theory</a>/<a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a>-relations of a boundary <a class="existingWikiWord" href="/nlab/show/QFT">QFT</a> (“tensor networks”, <a href="#Swingle09">Swingle 09</a>, <a href="#Swingle12">Swingle 12</a>, and quantum error correction codes <a href="#ADH14">ADH 14</a>, <a href="#PYHP15">PYHP 15</a>, see <a href="#Harlow18">Harlow 18</a> for review).</p>
 <center>
 <img src="https://ncatlab.org/nlab/files/BlackHoleTensorNetwork.jpg" width="500" /></center>
 <blockquote>
@@ -1155,7 +1155,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Review is in</p>
+<p>reviewed in</p>
 
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Mark+Van+Raamsdonk">Mark Van Raamsdonk</a>, <em>Lectures on Gravity and Entanglement</em>, chapter 5 in New Frontiers in Fields and Strings
@@ -1163,10 +1163,16 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>Development of this idea in terms of <span class="newWikiWord">tensor networks<a href="/nlab/new/tensor+networks">?</a></span> is due to</p>
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/renormalization">renormalization</a> of <a class="existingWikiWord" href="/nlab/show/entanglement">entanglement</a> and <span class="newWikiWord">tensor networks<a href="/nlab/new/tensor+networks">?</a></span> is due to</p>
 
 <ul>
-<li id="Swingle12">Brian Swingle, <em>Constructing holographic spacetimes using entanglement renormalization</em> (<a href="https://arxiv.org/abs/1209.3304">arXiv:1209.3304</a>)</li>
+<li id="Swingle09">
+<p>Brian Swingle, <em>Entanglement Renormalization and Holography</em> (<a href="https://arxiv.org/abs/0905.1317">arXiv:0905.1317</a>)</p>
+</li>
+
+<li id="Swingle12">
+<p>Brian Swingle, <em>Constructing holographic spacetimes using entanglement renormalization</em> (<a href="https://arxiv.org/abs/1209.3304">arXiv:1209.3304</a>)</p>
+</li>
 </ul>
 
 <p>and further in terms of quantum error correcting codes due to</p>
@@ -1198,14 +1204,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 13:06:58.
+  Last revised on January  3, 2019 at 16:42:46.
   See the <a href="https://ncatlab.org/nlab/history/holographic entanglement entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/holographic entanglement entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
