--- a/pages/18737.html
+++ b/pages/18737.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8119/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8119/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -516,15 +516,15 @@ margin-left: 0em;
 </li>
 
 <li id="CubicalCanonicity">
-<p>Simon Huber, <em>Canonicity for Cubical Type Theory</em>, <a href="https://arxiv.org/abs/1607.04156">1607.04156</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Simon+Huber">Simon Huber</a>, <em>Canonicity for Cubical Type Theory</em> (<a href="https://arxiv.org/abs/1607.04156">arXiv:1607.04156</a>)</p>
 </li>
 
 <li id="CubicalHIT">
-<p>Thierry Coquand, Simon Huber, Anders Mörtberg, <em>On Higher Inductive Types in Cubical Type Theory</em>, <a href="https://arxiv.org/abs/1802.01170">1802.01170</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Thierry+Coquand">Thierry Coquand</a>, <a class="existingWikiWord" href="/nlab/show/Simon+Huber">Simon Huber</a>, <a class="existingWikiWord" href="/nlab/show/Anders+M%C3%B6rtberg">Anders Mörtberg</a>, <em>On Higher Inductive Types in Cubical Type Theory</em> (<a href="https://arxiv.org/abs/1802.01170">arXiv:1802.01170</a>)</p>
 </li>
 
 <li>
-<p>Evan Cavallo and Robert Harper, <em>Parametric Cubical Type Theory</em>, <a href="https://arxiv.org/abs/1901.00489">1901.00489</a></p>
+<p><a class="existingWikiWord" href="/homotopytypetheory/show/Evan+Cavallo">Evan Cavallo</a>, <a class="existingWikiWord" href="/nlab/show/Robert+Harper">Robert Harper</a>, <em>Parametric Cubical Type Theory</em> (<a href="https://arxiv.org/abs/1901.00489">arXiv:1901.00489</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -533,14 +533,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 19:50:54.
+  Last revised on January  3, 2019 at 21:50:38.
   See the <a href="https://ncatlab.org/nlab/history/cubical type theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cubical+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+type+theory/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/cubical+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cubical+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cubical+type+theory/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cubical+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cubical+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cubical type theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
