--- a/pages/20040.html
+++ b/pages/20040.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      supersymmetric sigma-model in nLab
+      Ulf Lindström in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      supersymmetric sigma-model
+      Ulf Lindström
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9427/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,80 +309,87 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Contents</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
-<h1 id="contents">Contents</h1>
-<div class='maruku_toc'>
-<ul>
-<li><a href='#idea'>Idea</a></li>
-<li><a href='#related_entries'>Related entries</a></li>
-<li><a href='#references'>References</a></li>
-</ul>
-</div>
-
-<h2 id="idea">Idea</h2>
-
-<p>A <a class="existingWikiWord" href="/nlab/show/sigma-model">sigma-model</a> in <a class="existingWikiWord" href="/nlab/show/supergeometry">supergeometry</a>/with <a class="existingWikiWord" href="/nlab/show/supersymmetry">supersymmetry</a>.</p>
-
-<h2 id="related_entries">Related entries</h2>
-
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/superstring">superstring</a></p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/2d+%282%2C0%29-supersymmetric+sigma-model">2d (2,0)-supersymmetric sigma-model</a></li>
-</ul>
+<p><a href="https://katalog.uu.se/profile/?id=N2-533">webpage</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></p>
+<p><a href="https://en.wikipedia.org/wiki/Ulf_Lindstr%C3%B6m">Wikipedia entry</a></p>
 </li>
 </ul>
 
-<h2 id="references">References</h2>
+<h2 id="selected_writings">selected writings</h2>
 
 <ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Paul+Howe">Paul Howe</a>, <a class="existingWikiWord" href="/nlab/show/Ulf+Lindstr%C3%B6m">Ulf Lindström</a>, P. White, <em>Anomalies And Renormalization In The BRST-BV Framework</em> , Phys. Lett. B246 (1990) 430.</p>
+</li>
+
+<li>
+<p>Björn Brinne, Svend E. Hjelmeland, <a class="existingWikiWord" href="/nlab/show/Ulf+Lindstr%C3%B6m">Ulf Lindström</a>, <em>World-Volume Locally Supersymmetric Born-Infeld Actions</em>, Phys.Lett. B459 (1999) 507-514 (<a href="http://arxiv.org/abs/hep-th/9904175">arXiv:hep-th/9904175</a>)</p>
+</li>
+
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Ulf+Lindstr%C3%B6m">Ulf Lindström</a>, <em>Supersymmetric Sigma Model geometry</em> (<a href="http://arxiv.org/abs/1207.1241">arXiv:1207.1241</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Daniel+Freed">Daniel Freed</a>, <em>Lecture 4 of <a class="existingWikiWord" href="/nlab/show/Five+lectures+on+supersymmetry">Five lectures on supersymmetry</a></em></p>
+<p>G. Bossard, <a class="existingWikiWord" href="/nlab/show/Paul+Howe">Paul Howe</a>, Ulf Lindström, <a class="existingWikiWord" href="/nlab/show/Kellogg+Stelle">Kellogg Stelle</a>, L. Wulff, <em>Integral invariants in maximally supersymmetric Yang-Mills theories</em> (<a href="http://arxiv.org/abs/1012.3142">arXiv:1012.3142</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Jock+McOrist">Jock McOrist</a>, <em>The Revival of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(0,2)</annotation></semantics></math> Linear Sigma Models</em>, Int.J.Mod.Phys.A26:1-41,2011 (<a href="http://arxiv.org/abs/1010.4667">arXiv:1010.4667</a>)</p>
+<p>M. Abou-Zeid, <a class="existingWikiWord" href="/nlab/show/Chris+Hull">Chris Hull</a>, <a class="existingWikiWord" href="/nlab/show/Ulf+Lindstr%C3%B6m">Ulf Lindström</a>, <a class="existingWikiWord" href="/nlab/show/Martin+Ro%C4%8Dek">Martin Roček</a>, <em>T-Duality in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>2</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(2,1)</annotation></semantics></math> Superspace</em> (<a href="https://arxiv.org/abs/1901.00662">arXiv:1901.00662</a>)</p>
 </li>
 </ul>
 
-<p><a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a> for the supersymmetric sigma-model:</p>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>M. Abou-Zeid, <a class="existingWikiWord" href="/nlab/show/Chris+Hull">Chris Hull</a>, <a class="existingWikiWord" href="/nlab/show/Ulf+Lindstr%C3%B6m">Ulf Lindström</a>, <a class="existingWikiWord" href="/nlab/show/Martin+Ro%C4%8Dek">Martin Roček</a>, <em>T-Duality in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>2</mn><mo>,</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(2,1)</annotation></semantics></math> Superspace</em> (<a href="https://arxiv.org/abs/1901.00662">arXiv:1901.00662</a>)</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/3-dimensional+supergravity">3-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quantum+anomaly">quantum anomaly</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/supersymmetric+sigma-model">supersymmetric sigma-model</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Green-Schwarz+action+functional">Green-Schwarz action functional</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/T-duality">T-duality</a></p>
+</li>
 </ul>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 23:41:30.
-  See the <a href="https://ncatlab.org/nlab/history/supersymmetric sigma-model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on January  3, 2019 at 23:45:27.
+  See the <a href="https://ncatlab.org/nlab/history/Ulf Lindström" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/supersymmetric+sigma-model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/supersymmetric+sigma-model/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/supersymmetric+sigma-model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/supersymmetric+sigma-model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/supersymmetric sigma-model/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Ulf+Lindstr%C3%B6m" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Ulf Lindström/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/supersymmetric+sigma-model" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Ulf+Lindstr%C3%B6m" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/supersymmetric+sigma-model" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Ulf+Lindstr%C3%B6m" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/supersymmetric+sigma-model" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Ulf+Lindstr%C3%B6m" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
