--- a/pages/16968.html
+++ b/pages/16968.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9344/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9344/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -609,6 +609,8 @@ margin-left: 0em;
 
 <p>This follows from general properties of <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> when regarding <a class="existingWikiWord" href="/nlab/show/equivariant+stable+homotopy+theory">equivariant stable homotopy theory</a> as the result of inverting <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> with all <a class="existingWikiWord" href="/nlab/show/representation+spheres">representation spheres</a>, via <a href="stabilization#Robalo12">Robalo 12, last clause of Prop. 4.1 with last clause of Prop. 4.10 (1)</a>, generalized to sets of objects as in <a href="stabilization#Hoyois15">Hoyois 15, section 6.1</a>, see also <a href="stabilization#Hoyois15">Hoyois 15, Def. 6.1</a>.</p>
 
+<p>Alternatively, under the <a class="existingWikiWord" href="/nlab/show/equivalence+of+%28infinity%2C1%29-categories">equivalence</a> of <a class="existingWikiWord" href="/nlab/show/genuine+G-spectra">genuine G-spectra</a> with <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a> on the <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>, it follows as in <a href="#Nardin12">Nardin 12, Remark A.12</a>.</p>
+
 <h3 id="ROGDegrees"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>RO</mi><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">RO(G)</annotation></semantics></math>-degrees</h3>
 
 <p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi></mrow><annotation encoding="application/x-tex">V</annotation></semantics></math> an orthogonal linear <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/representation">representation</a> then the value of the equivariant suspension spectrum in that <a class="existingWikiWord" href="/nlab/show/RO%28G%29-grading">RO(G)-degree</a> is the <a class="existingWikiWord" href="/nlab/show/smash+product">smash product</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math> with the corresponding <a class="existingWikiWord" href="/nlab/show/representation+sphere">representation sphere</a>.</p>
@@ -648,7 +650,7 @@ margin-left: 0em;
 
 <ul>
 <li id="Blumberg17">
-<p><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, Ezample 2.5.9 in <em>Equivariant homotopy theory</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Andrew+Blumberg">Andrew Blumberg</a>, Example 2.5.9 in <em>Equivariant homotopy theory</em>, 2017 (<a href="https://www.ma.utexas.edu/users/a.debray/lecture_notes/m392c_EHT_notes.pdf">pdf</a>, <a href="https://github.com/adebray/equivariant_homotopy_theory">GitHub</a>)</p>
 </li>
 
 <li id="GreenleesMay95">
@@ -659,20 +661,26 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Stefan+Schwede">Stefan Schwede</a>, <em><a class="existingWikiWord" href="/nlab/show/Lectures+on+Equivariant+Stable+Homotopy+Theory">Lectures on Equivariant Stable Homotopy Theory</a></em>, 2015 (<a href="http://www.math.uni-bonn.de/people/schwede/equivariant.pdf">pdf</a>)</p>
 </li>
 </ul>
+
+<p>Discussion in terms of <a class="existingWikiWord" href="/nlab/show/spectral+Mackey+functors">spectral Mackey functors</a> on the <a class="existingWikiWord" href="/nlab/show/Burnside+category">Burnside category</a>:</p>
+
+<ul>
+<li id="Nardin12"><a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, section A.2 of <em>Stability and distributivity over orbital ∞-categories</em>, 2012 (<a href="http://hdl.handle.net/1721.1/112895">hdl.handle.net/1721.1/112895</a>, <a href="https://www.math.univ-paris13.fr/~nardin/thesis.pdf">pdf</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 12:22:20.
+  Last revised on January  4, 2019 at 17:59:45.
   See the <a href="https://ncatlab.org/nlab/history/equivariant suspension spectrum" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+suspension+spectrum" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+suspension+spectrum/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/equivariant+suspension+spectrum" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+suspension+spectrum" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant suspension spectrum/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
