--- a/pages/1814.html
+++ b/pages/1814.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9428/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,19 @@ margin-left: 0em;
 
 <h4 id="homotopy_theory">Homotopy theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p><p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p><p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p><p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p><p><strong>Introductions</strong></p><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/%28%E2%88%9E%2C1%29-category+theory">(∞,1)-category theory</a>, <a class="existingWikiWord" href="/nlab/show/homotopy+type+theory">homotopy type theory</a></strong></p>
+
+<p>flavors: <a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable</a>, <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant</a>, <a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational</a>, <a class="existingWikiWord" href="/nlab/show/p-adic+homotopy+theory">p-adic</a>, <a class="existingWikiWord" href="/nlab/show/proper+homotopy+theory">proper</a>, <a class="existingWikiWord" href="/nlab/show/geometric+homotopy+theory">geometric</a>, <a class="existingWikiWord" href="/nlab/show/cohesive+homotopy+theory">cohesive</a>, <a class="existingWikiWord" href="/nlab/show/directed+homotopy+theory">directed</a>…</p>
+
+<p>models: <a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a>, <a class="existingWikiWord" href="/nlab/show/simplicial+homotopy+theory">simplicial</a>, <a class="existingWikiWord" href="/nlab/show/localic+homotopy+theory">localic</a>, …</p>
+
+<p>see also <strong><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology+--+2">Introduction to Basic Homotopy Theory</a></p>
 </li>
@@ -329,7 +341,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/geometry+of+physics+--+homotopy+types">geometry of physics – homotopy types</a></p>
 </li>
-</ul><p><strong>Definitions</strong></p><ul>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy">homotopy</a>, <a class="existingWikiWord" href="/nlab/show/higher+homotopy">higher homotopy</a></p>
 </li>
@@ -381,7 +397,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/homotopy+category+of+an+%28%E2%88%9E%2C1%29-category">homotopy category of an (∞,1)-category</a></li>
 </ul>
 </li>
-</ul><p><strong>Paths and cylinders</strong></p><ul>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a></p>
 
@@ -427,7 +447,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong>Homotopy groups</strong></p><ul>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+group">homotopy group</a></p>
 
@@ -483,9 +507,17 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+category">fundamental category</a></li>
 </ul>
 </li>
-</ul><p><strong>Basic facts</strong></p><ul>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/fundamental+group+of+the+circle+is+the+integers">fundamental group of the circle is the integers</a></li>
-</ul><p><strong>Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/fundamental+theorem+of+covering+spaces">fundamental theorem of covering spaces</a></p>
 </li>
@@ -521,7 +553,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/homotopy+hypothesis">homotopy hypothesis</a>-theorem</p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -532,6 +565,7 @@ margin-left: 0em;
 <li><a href='#definition'>Definition</a></li>
 <li><a href='#properties'>Properties</a></li>
 <ul>
+<li><a href='#preservation_of_model_structure'>Preservation of model structure</a></li>
 <li><a href='#relation_to_geometric_realization'>Relation to geometric realization</a></li>
 <li><a href='#relation_to_ordinary_cohomology'>Relation to ordinary (co)homology</a></li>
 </ul>
@@ -556,6 +590,10 @@ margin-left: 0em;
 <p>The <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>-simplices of this are just <em><a class="existingWikiWord" href="/nlab/show/singular+simplex">singular n-simplices</a></em> generalising paths in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. (The term <em>singular</em> is used because there is no restriction that the continuous function used should be an embedding, as would be the case in, for instance, a <a class="existingWikiWord" href="/nlab/show/triangulation">triangulation</a> where a simplex in the underlying <a class="existingWikiWord" href="/nlab/show/simplicial+complex">simplicial complex</a> corresponds to an embedding of a simplex.)</p>
 
 <h2 id="properties">Properties</h2>
+
+<h3 id="preservation_of_model_structure">Preservation of model structure</h3>
+
+<p>The singular complex functor preserves all five classes of maps in a <a class="existingWikiWord" href="/nlab/show/model+category">model category</a>: <a class="existingWikiWord" href="/nlab/show/weak+equivalences">weak equivalences</a>, <a class="existingWikiWord" href="/nlab/show/cofibrations">cofibrations</a>, <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>, <a class="existingWikiWord" href="/nlab/show/fibrations">fibrations</a>, and <a class="existingWikiWord" href="/nlab/show/acyclic+fibrations">acyclic fibrations</a>. <span class="newWikiWord">Weak equivalences<a href="/nlab/new/Weak+equivalences">?</a></span> are preserved by definition of the <a class="existingWikiWord" href="/nlab/show/model+structure">model structure</a> on topological spaces, which is <a class="existingWikiWord" href="/nlab/show/transferred+model+structure">transferred</a> from <a class="existingWikiWord" href="/nlab/show/simplicial+sets">simplicial sets</a>. <a class="existingWikiWord" href="/nlab/show/Cofibrations">Cofibrations</a> (and hence <a class="existingWikiWord" href="/nlab/show/acyclic+cofibrations">acyclic cofibrations</a>) are preserved because all cofibrations of topological spaces are injective maps, injective maps are preserved, and all injective maps of simplicial sets are cofibrations. <span class="newWikiWord">Fibrations<a href="/nlab/new/Fibrations">?</a></span> and <a class="existingWikiWord" href="/nlab/show/acyclic+fibrations">acyclic fibrations</a> are preserved because the singular complex functor is a <a class="existingWikiWord" href="/nlab/show/right+Quillen+functor">right Quillen functor</a>.</p>
 
 <h3 id="relation_to_geometric_realization">Relation to geometric realization</h3>
 
@@ -586,14 +624,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  3, 2018 at 06:21:50.
+  Last revised on January  5, 2019 at 01:05:53.
   See the <a href="https://ncatlab.org/nlab/history/singular simplicial complex" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/singular+simplicial+complex" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/singular+simplicial+complex/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/singular+simplicial+complex" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/singular+simplicial+complex" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/singular simplicial complex/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
