--- a/pages/447.html
+++ b/pages/447.html
@@ -1230,6 +1230,10 @@ R(X \times Y) &amp; \cong &amp; R((X \otimes_{\Delta} \hom) \times (Y \otimes_{\
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/totalization">totalization</a></p>
 </li>
+
+<li>
+<p><span class="newWikiWord">singular complex functor<a href="/nlab/new/singular+complex+functor">?</a></span></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -1243,7 +1247,7 @@ R(X \times Y) &amp; \cong &amp; R((X \otimes_{\Delta} \hom) \times (Y \otimes_{\
 
 <div class="revisedby">
   <p>
-  Last revised on January  5, 2019 at 00:56:49.
+  Last revised on January  5, 2019 at 01:01:13.
   See the <a href="https://ncatlab.org/nlab/history/geometric realization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
