--- a/pages/9183.html
+++ b/pages/9183.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_17" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,15 +892,24 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 
 <h4 id="fields_and_quanta">Fields and quanta</h4>
 
-<div class="hide"><p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p><ul>
+<div class="hide"><div>
+
+<p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/force">force</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/photon">photon</a> - <a class="existingWikiWord" href="/nlab/show/electromagnetic+field">electromagnetic field</a> (abelian <a class="existingWikiWord" href="/nlab/show/Yang-Mills+field">Yang-Mills field</a>)</p>
 </li>
@@ -909,9 +929,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/infraparticle">infraparticle</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/scalar+field">scalar</a> <a class="existingWikiWord" href="/nlab/show/bosons">bosons</a></strong></p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/Higgs+boson">Higgs boson</a>, <a class="existingWikiWord" href="/nlab/show/inflaton">inflaton</a> (<a class="existingWikiWord" href="/nlab/show/scalar+field">scalar field</a>)</li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> <a class="existingWikiWord" href="/nlab/show/fermions">fermions</a></strong> (<a class="existingWikiWord" href="/nlab/show/spinors">spinors</a>, <a class="existingWikiWord" href="/nlab/show/Dirac+fields">Dirac fields</a>)</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/electron">electron</a></p>
 </li>
@@ -937,7 +965,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/muon">muon</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/hadron">hadron</a></strong> (<a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the above <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>)</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/meson">meson</a></p>
 
@@ -965,7 +997,31 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p><p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p><p>bosinos:</p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/solitons">solitons</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/caloron">caloron</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Skyrmion">Skyrmion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/instanton">instanton</a></p>
+</li>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/MSSM">minimally extended supersymmetric standard model</a></strong></p>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/superpartners">superpartners</a></strong></p>
+
+<p>bosinos:</p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gravitino">gravitino</a> - <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a> of <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> (<a class="existingWikiWord" href="/nlab/show/Rarita-Schwinger+field">Rarita-Schwinger field</a>)</p>
 </li>
@@ -977,9 +1033,17 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/gluino">gluino</a></p>
 </li>
-</ul><p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p><ul>
+</ul>
+
+<p><a class="existingWikiWord" href="/nlab/show/sfermions">sfermions</a>:</p>
+
+<ul>
 <li><a class="existingWikiWord" href="/nlab/show/squark">squark</a></li>
-</ul><p><strong>Exotica</strong></p><ul>
+</ul>
+
+<p><strong>Exotica</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/preon">preon</a></p>
 </li>
@@ -999,7 +1063,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/leptoquark">leptoquark</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/auxiliary+fields">auxiliary fields</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/ghost+field">ghost field</a></p>
 </li>
@@ -1011,7 +1079,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/antighost+field">antighost field</a>, <a class="existingWikiWord" href="/nlab/show/Nakanishi-Lautrup+field">Nakanishi-Lautrup field</a></p>
 </li>
-</ul></div>
+</ul>
+</div></div>
 </div>
 </div>
 
@@ -1021,7 +1090,7 @@ margin-left: 0em;
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#properties'>Properties</a></li>
 <ul>
-<li><a href='#cuspcore_problem'>Cusp-core problem</a></li>
+<li><a href='#CuspCoreProblem'>Cusp-core problem</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
@@ -1058,9 +1127,9 @@ margin-left: 0em;
 
 <h2 id="properties">Properties</h2>
 
-<h3 id="cuspcore_problem">Cusp-core problem</h3>
+<h3 id="CuspCoreProblem">Cusp-core problem</h3>
 
-<p>From J. Read <a href="https://twitter.com/ReadDark/status/1032176578808168448">22 Aug 2018</a>:</p>
+<p>From J. Read <a href="https://twitter.com/ReadDark/status/1032176578808168448">22 Aug 2018</a> on <a href="#ReadWalkerSteger18">Read-Walker-Steger 18</a>:</p>
 
 <blockquote>
 <p>On large scales, the <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard cosmological model</a> (LCDM) gives an excellent description of the <a class="existingWikiWord" href="/nlab/show/cosmic+microwave+background">cosmic microwave background</a> <a class="existingWikiWord" href="/nlab/show/radiation">radiation</a> and the <a class="existingWikiWord" href="/nlab/show/structure+formation">growth of structure</a>. However, on small scales, in our cosmic backyard known as the Local Group, there have been long-standing puzzles. The oldest of these is the “cusp-core” problem. Gas rich dwarf galaxies have much less dark matter (DM) in their inner regions than early numerical models predicted. This could point to more exotic DM models, or to a failure of the cosmological model.</p>
@@ -1135,13 +1204,7 @@ margin-left: 0em;
 <p>For more see</p>
 
 <ul>
-<li id="PontzenGovernato14">
-<p>Andrew Pontzen, Fabio Governato, <em>Cold dark matter heats up</em>, Nature, 506, 171 - 178 (13 Feb 2014) (<a href="https://arxiv.org/abs/1402.1764">arXiv:1402.1764</a>)</p>
-</li>
-
-<li id="ReadWalkerSteger18">
-<p>J. I. Read, M. G. Walker, P. Steger, <em>Dark matter heats up in dwarf galaxies</em> (<a href="https://arxiv.org/abs/1808.06634">arXiv:1808.06634</a>, <a href="http://online.kitp.ucsb.edu/online/cdm-c18/read/">talk slides pdf</a>)</p>
-</li>
+<li id="PontzenGovernato14">Andrew Pontzen, Fabio Governato, <em>Cold dark matter heats up</em>, Nature, 506, 171 - 178 (13 Feb 2014) (<a href="https://arxiv.org/abs/1402.1764">arXiv:1402.1764</a>)</li>
 </ul>
 
 <h3 id="Evidence">Evidence</h3>
@@ -1157,6 +1220,10 @@ margin-left: 0em;
 <blockquote>
 <p>Regardless of the formation history of NGC1052–DF2, its existence has implications for the dark matter paradigm. Our results demonstrate that dark matter is separable from galaxies, which is (under certain circumstances) expected if it is bound to baryons through nothing but gravity. The “<a class="existingWikiWord" href="/nlab/show/bullet+cluster">bullet cluster</a>” demonstrates that dark matter does not always trace the bulk of the baryonic mass, which in clusters is in the form of gas. NGC1052–DF2 enables us to make the complementary point that dark matter does not always coincide with galaxies either: it is a distinct “substance” that may or may not be present in a galaxy. Furthermore, and paradoxically, the existence of NGC1052–DF2 may falsify alternatives to dark matter. In theories such as <a class="existingWikiWord" href="/nlab/show/MOND">MOND</a> and the recently proposed emergent gravity paradigm a “dark matter” signature should always be detected, as it is an unavoidable consequence of the presence of ordinary matter. In fact, it had been argued previously that the apparent absence of galaxies such as NGC1052–DF2 constituted a falsification of the standard cosmological model, and evidence for modified gravity.</p>
 </blockquote>
+
+<ul>
+<li id="ReadWalkerSteger18">J. I. Read, M. G. Walker, P. Steger, <em>Dark matter heats up in dwarf galaxies</em>, Monthly Notices of the Royal Astronomical Society (<a href="https://arxiv.org/abs/1808.06634">arXiv:1808.06634</a>, <a href="https://doi.org/10.1093/mnras/sty3404">doi:10.1093/mnras/sty3404</a>, <a href="http://online.kitp.ucsb.edu/online/cdm-c18/read/">talk recording</a>)</li>
+</ul>
 
 <p>Outlook on prospect of direct detection of dark matter, as of 2018:</p>
 
@@ -1207,14 +1274,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 10:12:11.
+  Last revised on January  5, 2019 at 17:46:03.
   See the <a href="https://ncatlab.org/nlab/history/dark matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/dark matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
