--- a/pages/9183.html
+++ b/pages/9183.html
@@ -1241,6 +1241,14 @@ margin-left: 0em;
 <p>Andrew Pontzen, Fabio Governato, <em>Cold dark matter heats up</em>, Nature, 506, 171 - 178 (13 Feb 2014) (<a href="https://arxiv.org/abs/1402.1764">arXiv:1402.1764</a>)</p>
 </li>
 
+<li>
+<p>Jose Oñorbe, Michael Boylan-Kolchin, James S. Bullock, Philip F. Hopkins, Dušan Kerěs, Claude-André Faucher-Giguère, Eliot Quataert, Norman Murray, <em>Forged in FIRE: cusps, cores, and baryons in low-mass dwarf galaxies</em>, Monthly Notices of the Royal Astronomical Society, Volume 454, Issue 2, 1 December 2015 (<a href="https://arxiv.org/abs/1502.02036">arXiv:1502.02036</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Justin+Read">Justin Read</a>, O. Agertz, M. L. M. Collins, <em>Dark matter cores all the way down</em>, Monthly Notices of the Royal Astronomical Society, Volume 459, Issue 3, 1 July 2016 (<a href="https://arxiv.org/abs/1508.04143">arXiv:1508.04143</a>)</p>
+</li>
+
 <li id="ReadWalkerSteger18">
 <p><a class="existingWikiWord" href="/nlab/show/Justin+Read">Justin Read</a>, M. G. Walker, P. Steger, <em>Dark matter heats up in dwarf galaxies</em>, Monthly Notices of the Royal Astronomical Society (<a href="https://arxiv.org/abs/1808.06634">arXiv:1808.06634</a>, <a href="https://doi.org/10.1093/mnras/sty3404">doi:10.1093/mnras/sty3404</a>, <a href="http://online.kitp.ucsb.edu/online/cdm-c18/read/">talk recording</a>)</p>
 </li>
@@ -1249,7 +1257,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Cuspy_halo_problem">Cusly halo problem</a></em></li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Cuspy_halo_problem">Cuspy halo problem</a></em></li>
 </ul>
 
 <h3 id="axions">Axions</h3>
@@ -1295,14 +1303,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  6, 2019 at 13:58:32.
+  Last revised on January  7, 2019 at 03:51:24.
   See the <a href="https://ncatlab.org/nlab/history/dark matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/dark matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
