--- a/pages/19935.html
+++ b/pages/19935.html
@@ -566,20 +566,26 @@ margin-left: 0em;
 <ul>
 <li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Wallpaper_group">Wallpaper group</a></em></li>
 </ul>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/meromorphic+functions">meromorphic functions</a> on the <a class="existingWikiWord" href="/nlab/show/complex+plane">complex plane</a> invariant under wallpaper groups:</p>
+
+<ul>
+<li>Richard Chapling, <em>Invariant Meromorphic Functions on the Wallpaper Groups</em> (<a href="https://arxiv.org/abs/1608.05677">arXiv:1608.05677</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on December 11, 2018 at 07:00:58.
+  Last revised on January  7, 2019 at 03:10:58.
   See the <a href="https://ncatlab.org/nlab/history/wallpaper group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/wallpaper+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wallpaper+group/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/wallpaper+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wallpaper+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/wallpaper+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/wallpaper+group/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/wallpaper+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/wallpaper+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/wallpaper group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
